css/app.css
HTML {
	font-size: 35px;
	background-color: white;
	text-align: center;
	color: black;
}

input {
	text-align: left;
	flex-direction: row;
	display: inline;
	margin: auto;
}
h1 {
	text-align: center;
	color: black;
	border-color: #08373f;
	border: 5px;
	text-shadow: 3px 3px 1px white;
	font-family: 'Prosto One', cursive;
}

.exercise1Text, .createWorkoutArea, #workoutTable {
	display: none;
}

table {
	border-collapse: separate;
   	border-spacing: 10px;
	text-align: center;
	margin-left: auto;
	margin-right: auto;

}

th, td, tr, .displayTable, #workoutTable {
	padding: 5px;
   border: 1px solid #ccc;
   width: 50%;
   margin-left: 45%;
   margin-right: 25%;
   margin-top: 15%;
   margin-bottom: 15%;

}

.clockContainer {
	text-align: center;
	margin-left: 20%;
	margin-right: 5%;
}
.showCLock {
	display: inline-block;
	width: auto;
}

.calendarContainer {
	text-align: center;
	margin-bottom: 20px;
	margin-left: 20%;
	margin-right: 20%;
}
#showCalendar {
	display: none;
	margin-bottom: 20px;
	margin-left: 20%;
	margin-right: 20%;
}

.setRadioBtns {
	transform: scale(2);
	margin: 0 10px 0 10px;
}

body {
	text-align: center;
}

h3 {
	text-align: center;
	color: white;
	border-color: black;
	border: 5px;
	text-shadow: 3px 3px 1px black;
	font-family: 'Prosto One', cursive;
	margin-top: 80px;
}

#workoutHeader {
	text-align: center;
	color: white;
	border-color: black;
	border: 5px;
	text-shadow: 3px 3px 1px black;
	font-family: 'Prosto One', cursive;
	margin-top: 40px;
	display: none;
}

.usrNameRow, #usrNameText, #usrNameInput, #sgnUpText {
	flex-direction: row;
	display: inline;
	margin: auto;
	width: 150px;
}
/*
#wrkoutText, #exerciseText, #exerciseInput1, #exerciseInput2, #exerciseInput3 {
	flex-direction: row;
	display: inline;
	margin: auto;
}
*/
#btnDiv {
	flex-direction: row;
}


.formatInput {
	flex-direction: row;
	display: inline;
	margin: auto;
	width: 150px;
	height: 30px;
	font-size: 25px;
}

li {
	font-size: 25px;
	margin: auto;
	padding: 5px 5px 5px 5px;
	border: 3px solid darkgray;
	border-radius: 12px;
	/*color: #48BBEC;*/
}

ul {
	text-align: left;
}



#loginBtn, #signUpBtn, #verifyEmailBtn {
	background-color: #48BBEC; /* Green */
  	border: 3px solid #48BBEC;
  	color: white;
  	text-align: center;
  	text-decoration: none;
  	font-size: 20px;
	border-radius: 5px;
	margin: 20px auto;
  	display: inline-block;

	justify-content: center;
}

button {
	background-color: #08373f; /* Green */
  	border: 3px solid #48BBEC;
  	color: white;
  	text-align: center;
  	text-decoration: none;
  	font-size: 30px;
	border-radius: 5px;
	margin: 20px auto;
  	display: block;
	width: 200px;
	height: 45px;
	justify-content: center;
}

#createWorkoutArea {
	border: 5px;
	border-color: #333;
	border-style: solid;
	border-radius: 12px;
	padding: 15px;
	margin: auto;
	margin-bottom: 0px;
	width: 75%;
	text-align: center;

}

#border {
	border: 5px;
	border-color: #333;
	border-style: solid;
	border-radius: 12px;
	padding: 15px;
	margin: auto;
	margin-bottom: 0px;
	width: 85%;
	text-align: center;

}

.fc-time{
   display : none;
}

#createWrkoutBtn {
	display: none;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
    background-color: white;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 10px;
    border: 1px solid #888;
    width: 60%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}


.passwordRow,#passwordInput,#sgnUpPswrdInput {
	flex-direction: row;
	display: inline;
	margin: auto;
}

#passwordText, #sgnUpPswrdText {
	flex-direction: row;
	display: inline-block;
	margin: auto;
	padding-right: 4px;
}
/* Add a black background color to the top navigation */
.topnav {
    background-color: #08373f;
    overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
	font-family: 'Prosto One', cursive;
}

/* Change the color of links on hover */
.topnav a:hover {
    background-color: #ddd;
    color: black;
}

/* Add a color to the active/current link */
.topnav a.active {
    background-color: #4CAF50;
    color: white;
}

